Fix icon spacing problems in Chrome

--- a/browser/src/sass/components/_icon.scss
+++ b/browser/src/sass/components/_icon.scss
@@ -2,6 +2,7 @@
 
 img.icon {
     display: inline-block;
+    width: auto;
 
     @include no-select;
 
